Fix color contrast

--- a/themes/beautifulhugo/static/css/light.css
+++ b/themes/beautifulhugo/static/css/light.css
@@ -1,6 +1,6 @@
 /**
     Colors:
-    yellow: #ffa41b
+    yellow: #C77700
     light-grey: #f0f0f0;
     grey: #909090;
     dark-grey: #404040;
@@ -35,7 +35,7 @@ p, li {
 }
 a {
     position: relative;
-    color: #ffa41b;
+    color: #C77700;
 }
 a:hover { text-decoration: none; }
 
@@ -115,16 +115,16 @@ a:hover { text-decoration: none; }
 }
 
 .navbar-nav .active a {
-    color: #ffa41b;
+    color: #C77700;
 }
 .navbar-nav .active a::after {
-    border-color: #ffa41b;
+    border-color: #C77700;
 }
 
 .post-preview + .post-preview:before {
     content: "";
     display: block;
-    border-top: 3px solid #ffa41b;
+    border-top: 3px solid #C77700;
     width: 20%;
     margin: 30px auto;
 }
@@ -137,7 +137,7 @@ a:hover { text-decoration: none; }
 
 code {
     padding: 1px 5px;
-    color: #ffa41b;
+    color: #C77700;
     background-color: rgba(255, 217, 180, .4);
 }
 
@@ -145,7 +145,7 @@ code {
     margin: 0 -50px;
     padding: 15px 50px;
     max-width: none;
-    color: #ffa41b;
+    color: #C77700;
     font-weight: bold;
     background-color: rgba(255, 217, 180, .4);
 }
